Update styling Add title carousel Fix unwanted hidden overflow
Fix dance video

--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,68 @@
 .neumorphicButton {
     background: #ffffff;
     box-shadow:  3px 3px 8px #a6a6a6,
-                -3px -3px 8px #ffffff;
+                -3px -3px 8px #ffffff !important;
 }
 
-/* Scrolling Animation */
+.richLink {
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    color: #54b3d6;
+    padding: 0 .25rem;
+    margin: 0 -.25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+.richLink:hover {
+    color: #fff;
+    box-shadow: inset 200px 0 0 0 #54b3d6;
+}
+
+.btn-primary {
+    --bs-btn-color: #fff !important;
+    --bs-btn-bg: #54b3d6 !important;
+    --bs-btn-border-color: #54b3d6 !important;
+    --bs-btn-hover-color: #fff !important;
+    --bs-btn-hover-bg: #4392b5 !important;
+    --bs-btn-hover-border-color: #3f89aa !important;
+    --bs-btn-focus-shadow-rgb: 84, 179, 214 !important;
+    --bs-btn-active-color: #fff !important;
+    --bs-btn-active-bg: #3f89aa !important;
+    --bs-btn-active-border-color: #3b809f !important;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125) !important;
+    --bs-btn-disabled-color: #fff !important;
+    --bs-btn-disabled-bg: #54b3d6 !important;
+    --bs-btn-disabled-border-color: #54b3d6 !important;
+}
+
+.nav-link {
+    --bs-nav-link-display: block !important;
+    --bs-nav-link-padding-y: 0.5rem !important;
+    --bs-nav-link-padding-x: 1rem !important;
+    --bs-nav-link-font-size: 1rem !important;
+    --bs-nav-link-font-weight: 400 !important;
+    --bs-nav-link-color: #54b3d6 !important;
+    --bs-nav-link-text-decoration: none !important;
+    --bs-nav-link-background: transparent !important;
+    --bs-nav-link-border: 0 !important;
+    --bs-nav-link-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out !important;
+    --bs-nav-link-hover-color: #4392b5 !important;
+    --bs-nav-link-active-color: #3f89aa !important;
+    --bs-nav-link-disabled-color: #54b3d6 !important;
+  }
+  
+  .nav-link:hover {
+    color: var(--bs-nav-link-hover-color);
+  }
+  
+  .nav-link:active, .nav-link.active {
+    color: var(--bs-nav-link-active-color);
+  }
+  
+  .nav-link:disabled, .nav-link.disabled {
+    color: var(--bs-nav-link-disabled-color);
+  }
+
+/* Scrolling animation */
 .hiddenBlur {
     opacity: 0;
     transition: opacity 1s, transform 1s, filter 1s; /* Addresses webkit bug */
@@ -88,22 +146,17 @@
     }
 }
 
-
+/* Stagger Animation */
 .staggerAbout:nth-child(2) {
     transition-delay: 0.2s;
 }
 
-
 .staggerSkill:nth-child(2) {
     transition-delay: 0.2s;
 }
-.staggerSkill:nth-child(3) {
-    transition-delay: 0.4s;
-}
 .staggerSkill:nth-child(4) {
-    transition-delay: 0.6s;
+    transition-delay: 0.2s;
 }
-
 
 .staggerHobby:nth-child(2) {
     transition-delay: 0.2s;
@@ -135,7 +188,12 @@
 }
 
 .navbar-toggler {
+    box-shadow: none !important;
     border-color: transparent !important;
+}
+.navbar-toggler:active .navbar-toggler-icon,
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(134, 136, 138, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 /* Profile */
@@ -190,7 +248,14 @@
     margin-bottom: 1rem;
 }
 
+.carousel-item {
+    transition-duration: 1s !important;
+}
+
+
+
 /* Media Queries */
+/* up to xxl included */
 @media screen and (max-width: 1400px) {
     /* Profile Section Styles */
     #profile {
@@ -198,7 +263,8 @@
     }
 }
 
-@media screen and (max-width: 1000px) {
+/* up to md included */
+@media screen and (max-width: 991px) {
     /* Profile Styles */
     #profile{
         display: block;
@@ -219,9 +285,30 @@
         margin: 0 auto 2rem;
     }
 
+    /* Scroll animation */
+    .staggerSkill:nth-child(2) {
+        transition-delay: 0s;
+    }
+    .staggerSkill:nth-child(4) {
+        transition-delay: 0s;
+    }
+
+    .staggerHobby:nth-child(2) {
+        transition-delay: 0s;
+    }
+    .staggerHobby:nth-child(3) {
+        transition-delay: 0s;
+    }
 }
 
-@media screen and (max-width: 600px) {
+/* up to sm included */
+@media screen and (max-width: 767px) {
+    .staggerAbout:nth-child(2) {
+        transition-delay: 0s;
+    }
+}
+/* up to xs included */
+@media screen and (max-width: 575px) {
     /* Button Container Styles */
     .btn-container {
         flex-wrap: wrap;
@@ -241,6 +328,8 @@
     .title {
         font-size: 2rem;
     }
+
+    
 }
 
 /* Card hovering */
@@ -299,10 +388,10 @@
 
 /* Hobbies Cards */
 #badminton {
-    background-image: url('./assets/badminton.jpeg');
+    background-image: url('./assets/hobbies/badminton.jpeg');
 }
 #dance {
-    background-image: url('./assets/dance.JPG'); 
+    background-image: url('./assets/hobbies/dance.JPG'); 
     background-position: center;
 }
 
